styles/spell-better.css
/* ... */
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .item-list .item-image-show.rollable:hover {
  background-image: url("../../icons/svg/d20-black.svg") !important;
}
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .sub-header {
  display: flex;
  padding: 0 10px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .sub-header > :not(:last-child) {
  margin-right: 10px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .sub-header h4 {
  font-weight: 700;
  flex: 0 auto;
  margin-bottom: 0;
  white-space: nowrap;
}
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .sub-header hr {
  flex: 1 100%;
  height: 2px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .sub-header .item-controls {
  flex: 0 0 auto;
}
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .sub-header .item-controls a {
  flex: 1 0 auto;
}
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .item-name {
  min-height: 30px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .item-controls {
  text-align: right;
}
.dnd5e.sheet.actor.character.spell-better-sheet .items-list .item-controls > :not(:last-child) {
  margin-right: 5px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list {
  padding: 0;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .items-header {
  display: flex;
  flex: 0 auto;
  font-size: inherit;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .items-header h3 {
  margin-bottom: 0;
  margin-right: 0;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .items-header .item-controls {
  flex: 0 auto;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .items-header .item-controls .item-control {
  flex: 0 1em;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item {
  padding: 0;
  position: relative;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item.expanded .item-controls {
  display: flex !important;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item .item-controls {
  display: none !important;
  width: 100%;
  flex: 1 0 100%;
  order: 16;
  place-content: flex-end;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item-detail {
  border-right: 0;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item-uses {
  flex: 0 0 4em;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item-action {
  flex: 0 0 45px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .player-class {
  flex: 0 auto;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item-name {
  margin-left: 5px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item-summary {
  border-top: 2px groove var(--groove-gray);
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item-quantity {
  flex: 0 0 2.5em;
}
.dnd5e.sheet.actor.character.spell-better-sheet .condensed-inventory-list .item-weight {
  flex: 0 0 2.5em;
  border-right: 0;
  border-left: 0;
}
.dnd5e.sheet.actor.character.spell-better-sheet .features .item {
  padding-right: 1em;
}
.dnd5e.sheet.actor.character.spell-better-sheet .inventory > :not(:last-child) {
  margin-right: 5px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .inventory-sidebar {
  display: flex;
  flex-direction: column;
  flex: 1 1px;
  max-width: 20%;
}
.dnd5e.sheet.actor.character.spell-better-sheet .inventory-sidebar > :not(:last-child) {
  margin-bottom: 10px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .inventory-sidebar + .inventory-list {
  flex: 4;
}
.dnd5e.sheet.actor.character.spell-better-sheet .currency {
  align-items: stretch;
  display: flex;
  flex-direction: column;
  flex: 0 auto;
}
.dnd5e.sheet.actor.character.spell-better-sheet .currency .currency-inputs {
  align-items: center;
  flex-direction: column;
  display: flex;
}
.dnd5e.sheet.actor.character.spell-better-sheet .currency .currency-inputs > :not(:last-child) {
  margin-bottom: 10px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .currency .currency-inputs input {
  margin-left: 0.2em;
  width: 4em;
}
.dnd5e.sheet.actor.character.spell-better-sheet .currency .currency-input {
  background: var(--groove-gray);
  position: relative;
  width: 100%;
  border-radius: 3px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .currency label {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background: var(--groove-gray);
  text-transform: uppercase;
  font-weight: 700;
  font-size: 0.6em;
  position: absolute;
  right: 100%;
  top: 0.7em;
}
.dnd5e.sheet.actor.character.spell-better-sheet .encumberance {
  overflow: hidden;
  font-size: 0.7em;
  width: 100%;
}
.dnd5e.sheet.actor.character.spell-better-sheet .encumberance h3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.dnd5e.sheet.actor.character.spell-better-sheet .encumberance .encumbered {
  font-weight: 700;
  color: var(--highlight);
}
.dnd5e.sheet.actor.character.spell-better-sheet .personality > :not(:last-child) {
  margin-bottom: 2.5px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .personality h4 {
  font-size: 1em;
  font-weight: 700;
}
.dnd5e.sheet.actor.character.spell-better-sheet .personality section {
  border-radius: 0;
  display: flex;
  flex-direction: column;
  flex: 0 1 auto;
  padding: 5px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .personality section h4 {
  flex: 0 auto;
}
.dnd5e.sheet.actor.character.spell-better-sheet .personality section .editor {
  flex: 1;
  padding: 0;
  min-height: 50px;
}
.dnd5e.sheet.actor.character.spell-better-sheet .personality section:first-child {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}
/* ... */

